--- a/templates/sheets/actors/partials/pc-ability-text.hbs
+++ b/templates/sheets/actors/partials/pc-ability-text.hbs
@@ -1,6 +1,9 @@
 <p>
+    <a class="ability-card" data-item-id="{{_id}}">
     {{name}}
     {{#if data.rating}} 
     {{data.pool}} / {{data.rating}}
     {{/if}}
-</p>            
+    </a>
+</p>
+          
