--- a/templates/sheets/actors/partials/pc-info.hbs
+++ b/templates/sheets/actors/partials/pc-info.hbs
@@ -1,4 +1,4 @@
-<section style="display: flex; align-content: stretch; flex-direction: row; justify-content: center;">
+<section class="bio">
     <div style="flex-direction: column;">
         <div>
             {{localize "qsgs.char-sheet.name"}}
