--- a/less/qsgs.css
+++ b/less/qsgs.css
@@ -1,12 +1,32 @@
-.sheet form {
+.qsgs.sheet.item form {
   display: flex;
   flex-direction: column;
 }
-.sheet .sheet-content {
+.qsgs.sheet.item .sheet-content {
   height: 100%;
   display: flex;
   flex-direction: column;
 }
-.sheet .sheet-content .editor {
+.qsgs.sheet.item .sheet-content .editor {
   height: 100%;
+}
+.qsgs.sheet.pc form {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
+}
+.qsgs.sheet.pc .sheet-content {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+.qsgs.sheet.pc .sheet-content .editor {
+  height: 100%;
+}
+.qsgs.sheet.pc .page-structure {
+  display: flex;
+  align-content: stretch;
+  flex-direction: row;
+  justify-content: center;
 }
