--- a/templates/sheets/actors/partials/pc-ability-text.hbs
+++ b/templates/sheets/actors/partials/pc-ability-text.hbs
@@ -1,9 +1,11 @@
-<p>
-    <a class="ability-card" data-item-id="{{_id}}">
+<p class="item-context item" data-item-id="{{_id}}">   
+    
+    <a class="spend" data-item-id="{{_id}}">
     {{name}}
     {{#if data.rating}} 
     {{data.pool}} / {{data.rating}}
-    {{/if}}
+    {{/if}} 
     </a>
+
 </p>
           
