--- a/templates/sheets/actors/partials/pc-ability-page.hbs
+++ b/templates/sheets/actors/partials/pc-ability-page.hbs
@@ -6,18 +6,15 @@
     <a class="item" data-tab="other">{{localize "qsgs.char-sheet.other"}}</a>
 </nav>
 
-<section class="content" style="width: 900px">
+<section class="content" style="min-width: 1000px">
     <div class="tab" data-group="primary" data-tab="abilities">
         <section class="ability-categories">
             <div style="padding: 30px;">
                 <h1 class="category-refresh" data-category="investigative">
                     {{localize "qsgs.char-sheet.invTitle"}}
-                    <a class="item-create" data-type="InvestigativeAbility">
-                        <i class="fas fa-search" title="{{localize "qsgs.char-sheet.addInv"}}"></i>
-                    </a>
                 </h1>
                 <div class="ability-list">
-                    <div style="padding: 5px;">
+                    <div class="ability-col" style="padding: 10px;">
                         <h2 class="category-refresh" data-category="academic">
                             {{localize "qsgs.investigative-type.academic"}}
                             <i class="fas fa-book-open"></i>
@@ -26,7 +23,7 @@
                                 {{> "systems/qsgs/templates/sheets/actors/partials/pc-ability-text.hbs"}}
                         {{/each}}
                     </div>
-                    <div style="padding: 5px;">
+                    <div class="ability-col" style="padding: 10px;">
                         <h2 class="category-refresh" data-category="technical">
                             {{localize "qsgs.investigative-type.technical"}}
                             <i class="fas fa-wrench"></i>
@@ -35,7 +32,7 @@
                             {{> "systems/qsgs/templates/sheets/actors/partials/pc-ability-text.hbs"}}
                         {{/each}}
                     </div>
-                    <div style="padding: 5px;">
+                    <div class="ability-col" style="padding: 10px;">
                         <h2 class="category-refresh" data-category="interpersonal">
                             {{localize "qsgs.investigative-type.interpersonal"}}
                             <i class="fas fa-comments"></i>
@@ -52,7 +49,7 @@
                     {{localize "qsgs.char-sheet.genTitle"}}
                 </h1>
                 <div class="ability-list">
-                    <div style="padding: 5px;">
+                    <div style="padding: 10px;">
                         <h2 class="category-refresh" data-category="presence">
                             {{localize "qsgs.general-type.presence"}}
                             <i class="fas fa-brain"></i>
@@ -61,7 +58,7 @@
                             {{> "systems/qsgs/templates/sheets/actors/partials/pc-ability-text.hbs"}} 
                         {{/each}}
                     </div>
-                    <div style="padding: 5px;">
+                    <div class="ability-col" style="padding: 10px;">
                         <h2 class="category-refresh" data-category="focus"> 
                             {{localize "qsgs.general-type.focus"}}
                             <i class="fas fa-assistive-listening-systems"></i>
@@ -70,7 +67,7 @@
                             {{> "systems/qsgs/templates/sheets/actors/partials/pc-ability-text.hbs"}}
                         {{/each}}
                     </div>
-                    <div style="padding: 5px;">
+                    <div class="ability-col" style="padding: 10px;">
                         <h2 class="category-refresh" data-category="physical">
                             {{localize "qsgs.general-type.physical"}}
                             <i class="fas fa-heartbeat"></i>
