--- a/templates/sheets/items/partials/ability-sheet.hbs
+++ b/templates/sheets/items/partials/ability-sheet.hbs
@@ -17,9 +17,9 @@
                 </td>
             </tr>
             <tr>
-                <th>{{ localize "qsgs.ability-attr.hasrating"}}</th>
+                <th>Can Be Investigative?</th>
                 <td>
-                    <input name="data.hasrating" type="checkbox" {{ checked data.hasrating }}></input>
+                    <input name="data.canBeInvestigative" type="checkbox" {{ checked data.canBeInvestigative }}></input>
                 </td>
             </tr>
             <tr>
