General Build Points Counter

--- a/templates/sheets/actors/partials/pc-ability-page.hbs
+++ b/templates/sheets/actors/partials/pc-ability-page.hbs
@@ -47,6 +47,7 @@
             <div style="padding: 30px;">
                 <h1 class="category-refresh" data-category="general">
                     {{localize "qsgs.char-sheet.genTitle"}}
+                    {{ generalPoints }}
                 </h1>
                 <div class="ability-list">
                     <div style="padding: 10px;">
