Change Textareas to Editors

--- a/less/pc-sheet.less
+++ b/less/pc-sheet.less
@@ -17,7 +17,14 @@
             height: 100%;
         }
     }
-
+    .editor-size {
+        height: 100px;
+        display: flex;
+        flex-direction: column;
+        .editor {
+            height: 100%;
+        }
+    }
     .bio {
         display: flex; 
         align-content: stretch; 
@@ -44,5 +51,12 @@
         justify-content: center;
     }
 
-
 }
+
+.editor-section{
+    height: 100px;
+    .editor {
+        height: 100%;
+    }
+}
+
