--- a/less/pc-sheet.css
+++ b/less/pc-sheet.css
@@ -15,6 +15,14 @@
 .qsgs.sheet.pc .sheet-content .editor {
   height: 100%;
 }
+.qsgs.sheet.pc .editor-size {
+  height: 100px;
+  display: flex;
+  flex-direction: column;
+}
+.qsgs.sheet.pc .editor-size .editor {
+  height: 100%;
+}
 .qsgs.sheet.pc .bio {
   display: flex;
   align-content: stretch;
@@ -37,4 +45,10 @@
   align-content: stretch;
   flex-direction: row;
   justify-content: center;
+}
+.editor-section {
+  height: 100px;
+}
+.editor-section .editor {
+  height: 100%;
 }
